--- a/src/components/Countries/Countries.css
+++ b/src/components/Countries/Countries.css
@@ -4,3 +4,9 @@
     border-radius: 10px;
     padding: 15px;
 }
+.visited{
+    background-color: beige;
+}
+.non-visited{
+    background-color: green;
+}
